raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Image type, bpp always RGBA (32bit)
// NOTE: Data stored in CPU memory (RAM)
typedef struct Image
{
    void *data;  // Image raw data
    int width;   // Image base width
    int height;  // Image base height
    int mipmaps; // Mipmap levels, 1 by default
    int format;  // Data format (PixelFormat type)
} Image;
// Camera2D type, defines a 2d camera
typedef struct Camera2D
{
    Vector2 offset; // Camera offset (displacement from target)
    Vector2 target; // Camera target (rotation and zoom origin)
    float rotation; // Camera rotation in degrees
    float zoom;     // Camera zoom (scaling), should be 1.0f by default
} Camera2D;
// PS3 USB Controller Axis
typedef enum
{
    GAMEPAD_PS3_AXIS_LEFT_X = 0,
    GAMEPAD_PS3_AXIS_LEFT_Y = 1,
    GAMEPAD_PS3_AXIS_RIGHT_X = 2,
    GAMEPAD_PS3_AXIS_RIGHT_Y = 5,
    GAMEPAD_PS3_AXIS_L2 = 3, // [1..-1] (pressure-level)
    GAMEPAD_PS3_AXIS_R2 = 4  // [1..-1] (pressure-level)
} GamepadPS3Axis;
// Xbox360 USB Controller Buttons
typedef enum
{
    GAMEPAD_XBOX_BUTTON_A = 0,
    GAMEPAD_XBOX_BUTTON_B = 1,
    GAMEPAD_XBOX_BUTTON_X = 2,
    GAMEPAD_XBOX_BUTTON_Y = 3,
    GAMEPAD_XBOX_BUTTON_LB = 4,
    GAMEPAD_XBOX_BUTTON_RB = 5,
    GAMEPAD_XBOX_BUTTON_SELECT = 6,
    GAMEPAD_XBOX_BUTTON_START = 7,
    GAMEPAD_XBOX_BUTTON_HOME = 8,
    GAMEPAD_XBOX_BUTTON_UP = 10,
    GAMEPAD_XBOX_BUTTON_RIGHT = 11,
    GAMEPAD_XBOX_BUTTON_DOWN = 12,
    GAMEPAD_XBOX_BUTTON_LEFT = 13
} GamepadXbox360Button;
// Xbox360 USB Controller Axis,
// NOTE: For Raspberry Pi, axis must be reconfigured
typedef enum
{
    GAMEPAD_XBOX_AXIS_LEFT_X = 0,  // [-1..1] (left->right)
    GAMEPAD_XBOX_AXIS_LEFT_Y = 1,  // [1..-1] (up->down)
    GAMEPAD_XBOX_AXIS_RIGHT_X = 2, // [-1..1] (left->right)
    GAMEPAD_XBOX_AXIS_RIGHT_Y = 3, // [1..-1] (up->down)
    GAMEPAD_XBOX_AXIS_LT = 4,      // [-1..1] (pressure-level)
    GAMEPAD_XBOX_AXIS_RT = 5       // [-1..1] (pressure-level)
} GamepadXbox360Axis;
// Android Gamepad Controller (SNES CLASSIC)
typedef enum
{
    GAMEPAD_ANDROID_DPAD_UP = 19,
    GAMEPAD_ANDROID_DPAD_DOWN = 20,
    GAMEPAD_ANDROID_DPAD_LEFT = 21,
    GAMEPAD_ANDROID_DPAD_RIGHT = 22,
    GAMEPAD_ANDROID_DPAD_CENTER = 23,
    GAMEPAD_ANDROID_BUTTON_A = 96,
    GAMEPAD_ANDROID_BUTTON_B = 97,
    GAMEPAD_ANDROID_BUTTON_C = 98,
    GAMEPAD_ANDROID_BUTTON_X = 99,
    GAMEPAD_ANDROID_BUTTON_Y = 100,
    GAMEPAD_ANDROID_BUTTON_Z = 101,
    GAMEPAD_ANDROID_BUTTON_L1 = 102,
    GAMEPAD_ANDROID_BUTTON_R1 = 103,
    GAMEPAD_ANDROID_BUTTON_L2 = 104,
    GAMEPAD_ANDROID_BUTTON_R2 = 105
} GamepadAndroid;
// Shader location point type
typedef enum
{
    LOC_VERTEX_POSITION = 0,
    LOC_VERTEX_TEXCOORD01,
    LOC_VERTEX_TEXCOORD02,
    LOC_VERTEX_NORMAL,
    LOC_VERTEX_TANGENT,
    LOC_VERTEX_COLOR,
    LOC_MATRIX_MVP,
    LOC_MATRIX_MODEL,
    LOC_MATRIX_VIEW,
    LOC_MATRIX_PROJECTION,
    LOC_VECTOR_VIEW,
    LOC_COLOR_DIFFUSE,
    LOC_COLOR_SPECULAR,
    LOC_COLOR_AMBIENT,
    LOC_MAP_ALBEDO,    // LOC_MAP_DIFFUSE
    LOC_MAP_METALNESS, // LOC_MAP_SPECULAR
    LOC_MAP_NORMAL,
    LOC_MAP_ROUGHNESS,
    LOC_MAP_OCCLUSION,
    LOC_MAP_EMISSION,
    LOC_MAP_HEIGHT,
    LOC_MAP_CUBEMAP,
    LOC_MAP_IRRADIANCE,
    LOC_MAP_PREFILTER,
    LOC_MAP_BRDF
} ShaderLocationIndex;
// Shader uniform data types
typedef enum
{
    UNIFORM_FLOAT = 0,
    UNIFORM_VEC2,
    UNIFORM_VEC3,
    UNIFORM_VEC4,
    UNIFORM_INT,
    UNIFORM_IVEC2,
    UNIFORM_IVEC3,
    UNIFORM_IVEC4,
    UNIFORM_SAMPLER2D
} ShaderUniformDataType;
// Material map type
typedef enum
{
    MAP_ALBEDO = 0,    // MAP_DIFFUSE
    MAP_METALNESS = 1, // MAP_SPECULAR
    MAP_NORMAL = 2,
    MAP_ROUGHNESS = 3,
    MAP_OCCLUSION,
    MAP_EMISSION,
    MAP_HEIGHT,
    MAP_CUBEMAP,    // NOTE: Uses GL_TEXTURE_CUBE_MAP
    MAP_IRRADIANCE, // NOTE: Uses GL_TEXTURE_CUBE_MAP
    MAP_PREFILTER,  // NOTE: Uses GL_TEXTURE_CUBE_MAP
    MAP_BRDF
} TexmapIndex;
// Pixel formats
// NOTE: Support depends on OpenGL version and platform
typedef enum
{
    UNCOMPRESSED_GRAYSCALE = 1, // 8 bit per pixel (no alpha)
    UNCOMPRESSED_GRAY_ALPHA,    // 8*2 bpp (2 channels)
    UNCOMPRESSED_R5G6B5,        // 16 bpp
    UNCOMPRESSED_R8G8B8,        // 24 bpp
    UNCOMPRESSED_R5G5B5A1,      // 16 bpp (1 bit alpha)
    UNCOMPRESSED_R4G4B4A4,      // 16 bpp (4 bit alpha)
    UNCOMPRESSED_R8G8B8A8,      // 32 bpp
    UNCOMPRESSED_R32,           // 32 bpp (1 channel - float)
    UNCOMPRESSED_R32G32B32,     // 32*3 bpp (3 channels - float)
    UNCOMPRESSED_R32G32B32A32,  // 32*4 bpp (4 channels - float)
    COMPRESSED_DXT1_RGB,        // 4 bpp (no alpha)
    COMPRESSED_DXT1_RGBA,       // 4 bpp (1 bit alpha)
    COMPRESSED_DXT3_RGBA,       // 8 bpp
    COMPRESSED_DXT5_RGBA,       // 8 bpp
    COMPRESSED_ETC1_RGB,        // 4 bpp
    COMPRESSED_ETC2_RGB,        // 4 bpp
    COMPRESSED_ETC2_EAC_RGBA,   // 8 bpp
    COMPRESSED_PVRT_RGB,        // 4 bpp
    COMPRESSED_PVRT_RGBA,       // 4 bpp
    COMPRESSED_ASTC_4x4_RGBA,   // 8 bpp
    COMPRESSED_ASTC_8x8_RGBA    // 2 bpp
} PixelFormat;
// Texture parameters: filter mode
// NOTE 1: Filtering considers mipmaps if available in the texture
// NOTE 2: Filter is accordingly set for minification and magnification
typedef enum
{
    FILTER_POINT = 0,       // No filter, just pixel aproximation
    FILTER_BILINEAR,        // Linear filtering
    FILTER_TRILINEAR,       // Trilinear filtering (linear with mipmaps)
    FILTER_ANISOTROPIC_4X,  // Anisotropic filtering 4x
    FILTER_ANISOTROPIC_8X,  // Anisotropic filtering 8x
    FILTER_ANISOTROPIC_16X, // Anisotropic filtering 16x
} TextureFilterMode;
// Cubemap layout type
typedef enum
{
    CUBEMAP_AUTO_DETECT = 0,     // Automatically detect layout type
    CUBEMAP_LINE_VERTICAL,       // Layout is defined by a vertical line with faces
    CUBEMAP_LINE_HORIZONTAL,     // Layout is defined by an horizontal line with faces
    CUBEMAP_CROSS_THREE_BY_FOUR, // Layout is defined by a 3x4 cross with cubemap faces
    CUBEMAP_CROSS_FOUR_BY_THREE, // Layout is defined by a 4x3 cross with cubemap faces
    CUBEMAP_PANORAMA             // Layout is defined by a panorama image (equirectangular map)
} CubemapLayoutType;
// Texture parameters: wrap mode
typedef enum
{
    WRAP_REPEAT = 0,    // Repeats texture in tiled mode
    WRAP_CLAMP,         // Clamps texture to edge pixel in tiled mode
    WRAP_MIRROR_REPEAT, // Mirrors and repeats the texture in tiled mode
    WRAP_MIRROR_CLAMP   // Mirrors and clamps to border the texture in tiled mode
} TextureWrapMode;
// Font type, defines generation method
typedef enum
{
    FONT_DEFAULT = 0, // Default font generation, anti-aliased
    FONT_BITMAP,      // Bitmap font generation, no anti-aliasing
    FONT_SDF          // SDF font generation, requires external shader
} FontType;
// Color blending modes (pre-defined)
typedef enum
{
    BLEND_ALPHA = 0, // Blend textures considering alpha (default)
    BLEND_ADDITIVE,  // Blend textures adding colors
    BLEND_MULTIPLIED // Blend textures multiplying colors
} BlendMode;
// Gestures type
// NOTE: It could be used as flags to enable only some gestures
typedef enum
{
    GESTURE_NONE = 0,
    GESTURE_TAP = 1,
    GESTURE_DOUBLETAP = 2,
    GESTURE_HOLD = 4,
    GESTURE_DRAG = 8,
    GESTURE_SWIPE_RIGHT = 16,
    GESTURE_SWIPE_LEFT = 32,
    GESTURE_SWIPE_UP = 64,
    GESTURE_SWIPE_DOWN = 128,
    GESTURE_PINCH_IN = 256,
    GESTURE_PINCH_OUT = 512
} GestureType;
// Camera system modes
typedef enum
{
    CAMERA_CUSTOM = 0,
    CAMERA_FREE,
    CAMERA_ORBITAL,
    CAMERA_FIRST_PERSON,
    CAMERA_THIRD_PERSON
} CameraMode;
// Camera projection modes
typedef enum
{
    CAMERA_PERSPECTIVE = 0,
    CAMERA_ORTHOGRAPHIC
} CameraType;
// Head Mounted Display devices
typedef enum
{
    HMD_DEFAULT_DEVICE = 0,
    HMD_OCULUS_RIFT_DK2,
    HMD_OCULUS_RIFT_CV1,
    HMD_OCULUS_GO,
    HMD_VALVE_HTC_VIVE,
    HMD_SONY_PSVR
} VrDeviceType;
// Type of n-patch
typedef enum
{
    NPT_9PATCH = 0,       // Npatch defined by 3x3 tiles
    NPT_3PATCH_VERTICAL,  // Npatch defined by 1x3 tiles
    NPT_3PATCH_HORIZONTAL // Npatch defined by 3x1 tiles
} NPatchType;
// Callbacks to be implemented by users
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
    //------------------------------------------------------------------------------------
    // Global Variables Definition
    //------------------------------------------------------------------------------------
    // It's lonely here...

    //------------------------------------------------------------------------------------
    // Window and Graphics Device Functions (Module: core)
    //------------------------------------------------------------------------------------

    // Window-related functions
    RLAPI void InitWindow(int width, int height, const char *title); // Initialize window and OpenGL context
    RLAPI bool WindowShouldClose(void);                              // Check if KEY_ESCAPE pressed or Close icon pressed
    RLAPI void CloseWindow(void);                                    // Close window and unload OpenGL context
    RLAPI bool IsWindowReady(void);                                  // Check if window has been initialized successfully
    RLAPI bool IsWindowMinimized(void);                              // Check if window has been minimized (or lost focus)
    RLAPI bool IsWindowHidden(void);                                 // Check if window is currently hidden
    RLAPI void ToggleFullscreen(void);                               // Toggle fullscreen mode (only PLATFORM_DESKTOP)
    RLAPI void UnhideWindow(void);                                   // Show the window
    RLAPI void HideWindow(void);                                     // Hide the window
    RLAPI void SetWindowIcon(Image image);                           // Set icon for window (only PLATFORM_DESKTOP)
    RLAPI void SetWindowTitle(const char *title);                    // Set title for window (only PLATFORM_DESKTOP)
    RLAPI void SetWindowPosition(int x, int y);                      // Set window position on screen (only PLATFORM_DESKTOP)
    RLAPI void SetWindowMonitor(int monitor);                        // Set monitor for the current window (fullscreen mode)
    RLAPI void SetWindowMinSize(int width, int height);              // Set window minimum dimensions (for FLAG_WINDOW_RESIZABLE)
    RLAPI void SetWindowSize(int width, int height);                 // Set window dimensions
    RLAPI void *GetWindowHandle(void);                               // Get native window handle
    RLAPI int GetScreenWidth(void);                                  // Get current screen width
    RLAPI int GetScreenHeight(void);                                 // Get current screen height
    RLAPI int GetMonitorCount(void);                                 // Get number of connected monitors
    RLAPI int GetMonitorWidth(int monitor);                          // Get primary monitor width
    RLAPI int GetMonitorHeight(int monitor);                         // Get primary monitor height
    RLAPI int GetMonitorPhysicalWidth(int monitor);                  // Get primary monitor physical width in millimetres
    RLAPI int GetMonitorPhysicalHeight(int monitor);                 // Get primary monitor physical height in millimetres
    RLAPI const char *GetMonitorName(int monitor);                   // Get the human-readable, UTF-8 encoded name of the primary monitor
    RLAPI const char *GetClipboardText(void);                        // Get clipboard text content
    RLAPI void SetClipboardText(const char *text);                   // Set clipboard text content
    // Cursor-related functions
    RLAPI void ShowCursor(void);     // Shows cursor
    RLAPI void HideCursor(void);     // Hides cursor
    RLAPI bool IsCursorHidden(void); // Check if cursor is not visible
    RLAPI void EnableCursor(void);   // Enables cursor (unlock cursor)
    RLAPI void DisableCursor(void);  // Disables cursor (lock cursor)
    // Drawing-related functions
    RLAPI void ClearBackground(Color color);             // Set background color (framebuffer clear color)
    RLAPI void BeginDrawing(void);                       // Setup canvas (framebuffer) to start drawing
    RLAPI void EndDrawing(void);                         // End canvas drawing and swap buffers (double buffering)
    RLAPI void BeginMode2D(Camera2D camera);             // Initialize 2D mode with custom camera (2D)