raylib-sys/bindings_osx.rs

pub mod GamepadPS3Axis {
    pub type Type = u32;
    pub const GAMEPAD_PS3_AXIS_LEFT_X: Type = 0;
    pub const GAMEPAD_PS3_AXIS_LEFT_Y: Type = 1;
    pub const GAMEPAD_PS3_AXIS_RIGHT_X: Type = 2;
    pub const GAMEPAD_PS3_AXIS_RIGHT_Y: Type = 5;
    pub const GAMEPAD_PS3_AXIS_L2: Type = 3;
    pub const GAMEPAD_PS3_AXIS_R2: Type = 4;
}
pub mod GamepadXbox360Button {
    pub type Type = u32;
    pub const GAMEPAD_XBOX_BUTTON_A: Type = 0;
    pub const GAMEPAD_XBOX_BUTTON_B: Type = 1;
    pub const GAMEPAD_XBOX_BUTTON_X: Type = 2;
    pub const GAMEPAD_XBOX_BUTTON_Y: Type = 3;
    pub const GAMEPAD_XBOX_BUTTON_LB: Type = 4;
    pub const GAMEPAD_XBOX_BUTTON_RB: Type = 5;
    pub const GAMEPAD_XBOX_BUTTON_SELECT: Type = 6;
    pub const GAMEPAD_XBOX_BUTTON_START: Type = 7;
    pub const GAMEPAD_XBOX_BUTTON_HOME: Type = 8;
    pub const GAMEPAD_XBOX_BUTTON_UP: Type = 10;
    pub const GAMEPAD_XBOX_BUTTON_RIGHT: Type = 11;
    pub const GAMEPAD_XBOX_BUTTON_DOWN: Type = 12;
    pub const GAMEPAD_XBOX_BUTTON_LEFT: Type = 13;
}
pub mod GamepadXbox360Axis {
    pub type Type = u32;
    pub const GAMEPAD_XBOX_AXIS_LEFT_X: Type = 0;
    pub const GAMEPAD_XBOX_AXIS_LEFT_Y: Type = 1;
    pub const GAMEPAD_XBOX_AXIS_RIGHT_X: Type = 2;
    pub const GAMEPAD_XBOX_AXIS_RIGHT_Y: Type = 3;
    pub const GAMEPAD_XBOX_AXIS_LT: Type = 4;
    pub const GAMEPAD_XBOX_AXIS_RT: Type = 5;
}
pub mod GamepadAndroid {
    pub type Type = u32;
    pub const GAMEPAD_ANDROID_DPAD_UP: Type = 19;
    pub const GAMEPAD_ANDROID_DPAD_DOWN: Type = 20;
    pub const GAMEPAD_ANDROID_DPAD_LEFT: Type = 21;
    pub const GAMEPAD_ANDROID_DPAD_RIGHT: Type = 22;
    pub const GAMEPAD_ANDROID_DPAD_CENTER: Type = 23;
    pub const GAMEPAD_ANDROID_BUTTON_A: Type = 96;
    pub const GAMEPAD_ANDROID_BUTTON_B: Type = 97;
    pub const GAMEPAD_ANDROID_BUTTON_C: Type = 98;
    pub const GAMEPAD_ANDROID_BUTTON_X: Type = 99;
    pub const GAMEPAD_ANDROID_BUTTON_Y: Type = 100;
    pub const GAMEPAD_ANDROID_BUTTON_Z: Type = 101;
    pub const GAMEPAD_ANDROID_BUTTON_L1: Type = 102;
    pub const GAMEPAD_ANDROID_BUTTON_R1: Type = 103;
    pub const GAMEPAD_ANDROID_BUTTON_L2: Type = 104;
    pub const GAMEPAD_ANDROID_BUTTON_R2: Type = 105;
}
pub mod ShaderLocationIndex {
    pub type Type = u32;
    pub const LOC_VERTEX_POSITION: Type = 0;
    pub const LOC_VERTEX_TEXCOORD01: Type = 1;
    pub const LOC_VERTEX_TEXCOORD02: Type = 2;
    pub const LOC_VERTEX_NORMAL: Type = 3;
    pub const LOC_VERTEX_TANGENT: Type = 4;
    pub const LOC_VERTEX_COLOR: Type = 5;
    pub const LOC_MATRIX_MVP: Type = 6;
    pub const LOC_MATRIX_MODEL: Type = 7;
    pub const LOC_MATRIX_VIEW: Type = 8;
    pub const LOC_MATRIX_PROJECTION: Type = 9;
    pub const LOC_VECTOR_VIEW: Type = 10;
    pub const LOC_COLOR_DIFFUSE: Type = 11;
    pub const LOC_COLOR_SPECULAR: Type = 12;
    pub const LOC_COLOR_AMBIENT: Type = 13;
    pub const LOC_MAP_ALBEDO: Type = 14;
    pub const LOC_MAP_METALNESS: Type = 15;
    pub const LOC_MAP_NORMAL: Type = 16;
    pub const LOC_MAP_ROUGHNESS: Type = 17;
    pub const LOC_MAP_OCCLUSION: Type = 18;
    pub const LOC_MAP_EMISSION: Type = 19;
    pub const LOC_MAP_HEIGHT: Type = 20;
    pub const LOC_MAP_CUBEMAP: Type = 21;
    pub const LOC_MAP_IRRADIANCE: Type = 22;
    pub const LOC_MAP_PREFILTER: Type = 23;
    pub const LOC_MAP_BRDF: Type = 24;
}
pub mod ShaderUniformDataType {
    pub type Type = u32;
    pub const UNIFORM_FLOAT: Type = 0;
    pub const UNIFORM_VEC2: Type = 1;
    pub const UNIFORM_VEC3: Type = 2;
    pub const UNIFORM_VEC4: Type = 3;
    pub const UNIFORM_INT: Type = 4;
    pub const UNIFORM_IVEC2: Type = 5;
    pub const UNIFORM_IVEC3: Type = 6;
    pub const UNIFORM_IVEC4: Type = 7;
    pub const UNIFORM_SAMPLER2D: Type = 8;
}
pub mod TexmapIndex {
    pub type Type = u32;
    pub const MAP_ALBEDO: Type = 0;
    pub const MAP_METALNESS: Type = 1;
    pub const MAP_NORMAL: Type = 2;
    pub const MAP_ROUGHNESS: Type = 3;
    pub const MAP_OCCLUSION: Type = 4;
    pub const MAP_EMISSION: Type = 5;
    pub const MAP_HEIGHT: Type = 6;
    pub const MAP_CUBEMAP: Type = 7;
    pub const MAP_IRRADIANCE: Type = 8;
    pub const MAP_PREFILTER: Type = 9;
    pub const MAP_BRDF: Type = 10;
}
pub mod PixelFormat {
    pub type Type = u32;
    pub const UNCOMPRESSED_GRAYSCALE: Type = 1;
    pub const UNCOMPRESSED_GRAY_ALPHA: Type = 2;
    pub const UNCOMPRESSED_R5G6B5: Type = 3;
    pub const UNCOMPRESSED_R8G8B8: Type = 4;
    pub const UNCOMPRESSED_R5G5B5A1: Type = 5;
    pub const UNCOMPRESSED_R4G4B4A4: Type = 6;
    pub const UNCOMPRESSED_R8G8B8A8: Type = 7;
    pub const UNCOMPRESSED_R32: Type = 8;
    pub const UNCOMPRESSED_R32G32B32: Type = 9;
    pub const UNCOMPRESSED_R32G32B32A32: Type = 10;
    pub const COMPRESSED_DXT1_RGB: Type = 11;
    pub const COMPRESSED_DXT1_RGBA: Type = 12;
    pub const COMPRESSED_DXT3_RGBA: Type = 13;
    pub const COMPRESSED_DXT5_RGBA: Type = 14;
    pub const COMPRESSED_ETC1_RGB: Type = 15;
    pub const COMPRESSED_ETC2_RGB: Type = 16;
    pub const COMPRESSED_ETC2_EAC_RGBA: Type = 17;
    pub const COMPRESSED_PVRT_RGB: Type = 18;
    pub const COMPRESSED_PVRT_RGBA: Type = 19;
    pub const COMPRESSED_ASTC_4x4_RGBA: Type = 20;
    pub const COMPRESSED_ASTC_8x8_RGBA: Type = 21;
}
pub mod TextureFilterMode {
    pub type Type = u32;
    pub const FILTER_POINT: Type = 0;
    pub const FILTER_BILINEAR: Type = 1;
    pub const FILTER_TRILINEAR: Type = 2;
    pub const FILTER_ANISOTROPIC_4X: Type = 3;
    pub const FILTER_ANISOTROPIC_8X: Type = 4;
    pub const FILTER_ANISOTROPIC_16X: Type = 5;
}
pub mod CubemapLayoutType {
    pub type Type = u32;
    pub const CUBEMAP_AUTO_DETECT: Type = 0;
    pub const CUBEMAP_LINE_VERTICAL: Type = 1;
    pub const CUBEMAP_LINE_HORIZONTAL: Type = 2;
    pub const CUBEMAP_CROSS_THREE_BY_FOUR: Type = 3;
    pub const CUBEMAP_CROSS_FOUR_BY_THREE: Type = 4;
    pub const CUBEMAP_PANORAMA: Type = 5;
}
pub mod TextureWrapMode {
    pub type Type = u32;
    pub const WRAP_REPEAT: Type = 0;
    pub const WRAP_CLAMP: Type = 1;
    pub const WRAP_MIRROR_REPEAT: Type = 2;
    pub const WRAP_MIRROR_CLAMP: Type = 3;
}
pub mod FontType {
    pub type Type = u32;
    pub const FONT_DEFAULT: Type = 0;
    pub const FONT_BITMAP: Type = 1;
    pub const FONT_SDF: Type = 2;
}
pub mod BlendMode {
    pub type Type = u32;
    pub const BLEND_ALPHA: Type = 0;
    pub const BLEND_ADDITIVE: Type = 1;
    pub const BLEND_MULTIPLIED: Type = 2;
}
pub mod GestureType {
    pub type Type = u32;
    pub const GESTURE_NONE: Type = 0;
    pub const GESTURE_TAP: Type = 1;
    pub const GESTURE_DOUBLETAP: Type = 2;
    pub const GESTURE_HOLD: Type = 4;
    pub const GESTURE_DRAG: Type = 8;
    pub const GESTURE_SWIPE_RIGHT: Type = 16;
    pub const GESTURE_SWIPE_LEFT: Type = 32;
    pub const GESTURE_SWIPE_UP: Type = 64;
    pub const GESTURE_SWIPE_DOWN: Type = 128;
    pub const GESTURE_PINCH_IN: Type = 256;
    pub const GESTURE_PINCH_OUT: Type = 512;
}
pub mod CameraMode {
    pub type Type = u32;
    pub const CAMERA_CUSTOM: Type = 0;
    pub const CAMERA_FREE: Type = 1;
    pub const CAMERA_ORBITAL: Type = 2;
    pub const CAMERA_FIRST_PERSON: Type = 3;
    pub const CAMERA_THIRD_PERSON: Type = 4;
}
pub mod CameraType {
    pub type Type = u32;
    pub const CAMERA_PERSPECTIVE: Type = 0;
    pub const CAMERA_ORTHOGRAPHIC: Type = 1;
}
pub mod VrDeviceType {
    pub type Type = u32;
    pub const HMD_DEFAULT_DEVICE: Type = 0;
    pub const HMD_OCULUS_RIFT_DK2: Type = 1;
    pub const HMD_OCULUS_RIFT_CV1: Type = 2;
    pub const HMD_OCULUS_GO: Type = 3;
    pub const HMD_VALVE_HTC_VIVE: Type = 4;
    pub const HMD_SONY_PSVR: Type = 5;
}
pub mod NPatchType {
    pub type Type = u32;
    pub const NPT_9PATCH: Type = 0;
    pub const NPT_3PATCH_VERTICAL: Type = 1;
    pub const NPT_3PATCH_HORIZONTAL: Type = 2;
}
pub type TraceLogCallback = ::std::option::Option<
    unsafe extern "C" fn(
        logType: ::std::os::raw::c_int,
        text: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ),
>;
extern "C" {
    #[link_name = "\u{1}_InitWindow"]
    pub fn InitWindow(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        title: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[link_name = "\u{1}_WindowShouldClose"]
    pub fn WindowShouldClose() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_CloseWindow"]
    pub fn CloseWindow();
}
extern "C" {
    #[link_name = "\u{1}_IsWindowReady"]
    pub fn IsWindowReady() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsWindowMinimized"]
    pub fn IsWindowMinimized() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsWindowHidden"]
    pub fn IsWindowHidden() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_ToggleFullscreen"]
    pub fn ToggleFullscreen();
}
extern "C" {
    #[link_name = "\u{1}_UnhideWindow"]
    pub fn UnhideWindow();
}
extern "C" {
    #[link_name = "\u{1}_HideWindow"]
    pub fn HideWindow();
}
extern "C" {
    #[link_name = "\u{1}_SetWindowIcon"]
    pub fn SetWindowIcon(image: Image);
}
extern "C" {
    #[link_name = "\u{1}_SetWindowTitle"]
    pub fn SetWindowTitle(title: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_SetWindowPosition"]
    pub fn SetWindowPosition(x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetWindowMonitor"]
    pub fn SetWindowMonitor(monitor: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetWindowMinSize"]
    pub fn SetWindowMinSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetWindowSize"]
    pub fn SetWindowSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_GetWindowHandle"]
    pub fn GetWindowHandle() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_GetScreenWidth"]
    pub fn GetScreenWidth() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetScreenHeight"]
    pub fn GetScreenHeight() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorCount"]
    pub fn GetMonitorCount() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorWidth"]
    pub fn GetMonitorWidth(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorHeight"]
    pub fn GetMonitorHeight(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorPhysicalWidth"]
    pub fn GetMonitorPhysicalWidth(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorPhysicalHeight"]
    pub fn GetMonitorPhysicalHeight(monitor: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMonitorName"]
    pub fn GetMonitorName(monitor: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetClipboardText"]
    pub fn GetClipboardText() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_SetClipboardText"]
    pub fn SetClipboardText(text: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_ShowCursor"]
    pub fn ShowCursor();
}
extern "C" {
    #[link_name = "\u{1}_HideCursor"]
    pub fn HideCursor();
}
extern "C" {
    #[link_name = "\u{1}_IsCursorHidden"]
    pub fn IsCursorHidden() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_EnableCursor"]
    pub fn EnableCursor();
}
extern "C" {
    #[link_name = "\u{1}_DisableCursor"]
    pub fn DisableCursor();
}
extern "C" {
    #[link_name = "\u{1}_ClearBackground"]
    pub fn ClearBackground(color: Color);
}
extern "C" {
    #[link_name = "\u{1}_BeginDrawing"]
    pub fn BeginDrawing();
}
extern "C" {
    #[link_name = "\u{1}_EndDrawing"]
    pub fn EndDrawing();
}
extern "C" {
    #[link_name = "\u{1}_BeginMode2D"]
    pub fn BeginMode2D(camera: Camera2D);
}
